--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,14 @@
     <application android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
         android:theme="@style/AppTheme">
-
+        <activity
+            android:name=".title.TitleScreen"
+            android:label="@string/title_activity_game_select_screen" >
+        </activity>
+        <activity
+            android:name=".credits.CreditsScreen"
+            android:label="@string/title_activity_credits_screen" >
+        </activity>
     </application>
 
 </manifest>
